--- a/firmware/src/config/default/default.mhc/cryptoauthlib.yml
+++ b/firmware/src/config/default/default.mhc/cryptoauthlib.yml
@@ -17,6 +17,13 @@ children:
           - {type: Value, value: ATECC608A}
           - {type: Value, value: ATECC608}
   - type: Boolean
+    attributes: {id: CAL_ENABLE_DEBUG_PRINT}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'true'}
+  - type: Boolean
     attributes: {id: CAL_ENABLE_RTOS}
     children:
     - type: Values
@@ -31,25 +38,7 @@ children:
       - type: Dynamic
         attributes: {id: cryptoauthlib, value: 'false'}
   - type: File
-    attributes: {id: CAL_FILE_SRC_87}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
-  - type: File
-    attributes: {id: CAL_FILE_SRC_88}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
-  - type: File
-    attributes: {id: CAL_FILE_SRC_89}
+    attributes: {id: CAL_FILE_SRC_HAL_I2C}
     children:
     - type: Attributes
       children:
@@ -67,6 +56,13 @@ children:
         children:
         - type: Values
           children:
-          - {type: Value, value: sercom2_i2c}
+          - {type: Value, value: sercom0_i2c}
+  - type: Integer
+    attributes: {id: CAL_POLL_INIT_TIME}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '2'}
 - type: ElementPosition
   attributes: {x: '783', y: '18', id: cryptoauthlib}
