--- a/firmware/src/config/default/default.mhc/sercom0.yml
+++ b/firmware/src/config/default/default.mhc/sercom0.yml
@@ -1,6 +1,6 @@
 format_version: v1.0
 type: UniqueComponent
-attributes: {id: sercom2}
+attributes: {id: sercom0}
 children:
 - type: Symbols
   children:
@@ -10,7 +10,7 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: sercom2, value: '232'}
+        attributes: {id: sercom0, value: '232'}
   - type: KeyValueSet
     attributes: {id: I2CM_MODE}
     children:
@@ -19,7 +19,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Integer
     attributes: {id: I2CM_TRISE}
     children:
@@ -28,7 +28,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: I2C_ADDR_TENBITEN}
     children:
@@ -37,7 +37,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Integer
     attributes: {id: I2C_CLOCK_SPEED}
     children:
@@ -46,7 +46,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: I2C_RUNSTDBY}
     children:
@@ -55,14 +55,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
-  - type: Integer
-    attributes: {id: I2C_SCLSM}
-    children:
-    - type: Values
-      children:
-      - type: Dynamic
-        attributes: {id: sercom2, value: '0'}
+        - {type: Value, value: 'true'}
   - type: KeyValueSet
     attributes: {id: I2C_SDAHOLD_TIME}
     children:
@@ -71,14 +64,14 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: String
     attributes: {id: RECEIVE_DATA_REGISTER}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: sercom2, value: '&(SERCOM2_REGS->USART_INT.SERCOM_DATA)'}
+        attributes: {id: sercom0, value: ''}
   - type: File
     attributes: {id: SERCOM_I2CM_HEADER}
     children:
@@ -87,7 +80,7 @@ children:
       - type: Boolean
         attributes: {id: enabled}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: File
     attributes: {id: SERCOM_I2CM_MASTER_HEADER}
     children:
@@ -96,7 +89,7 @@ children:
       - type: Boolean
         attributes: {id: enabled}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: File
     attributes: {id: SERCOM_I2CM_SOURCE}
     children:
@@ -105,7 +98,7 @@ children:
       - type: Boolean
         attributes: {id: enabled}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: KeyValueSet
     attributes: {id: SERCOM_MODE}
     children:
@@ -114,13 +107,11 @@ children:
       - type: Boolean
         attributes: {id: readOnly}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: sercom2, value: '2'}
-      - type: User
-        attributes: {value: '0'}
+        attributes: {id: sercom0, value: '2'}
   - type: File
     attributes: {id: SERCOM_USART_COMMON_HEADER}
     children:
@@ -129,7 +120,7 @@ children:
       - type: Boolean
         attributes: {id: enabled}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
   - type: File
     attributes: {id: SERCOM_USART_HEADER}
     children:
@@ -138,11 +129,7 @@ children:
       - type: Boolean
         attributes: {id: enabled}
         children:
-        - {type: Value, value: 'true'}
-      - type: String
-        attributes: {id: source}
-        children:
-        - {type: Value, value: ../peripheral/sercom_u2201/templates/plib_sercom_usart.h.ftl}
+        - {type: Value, value: 'false'}
   - type: File
     attributes: {id: SERCOM_USART_SOURCE}
     children:
@@ -151,25 +138,21 @@ children:
       - type: Boolean
         attributes: {id: enabled}
         children:
-        - {type: Value, value: 'true'}
-      - type: String
-        attributes: {id: source}
-        children:
-        - {type: Value, value: ../peripheral/sercom_u2201/templates/plib_sercom_usart.c.ftl}
+        - {type: Value, value: 'false'}
   - type: Integer
     attributes: {id: SPI_BAUD_REG_VALUE}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: sercom2, value: '23'}
+        attributes: {id: sercom0, value: '23'}
   - type: String
     attributes: {id: TRANSMIT_DATA_REGISTER}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: sercom2, value: '&(SERCOM2_REGS->USART_INT.SERCOM_DATA)'}
+        attributes: {id: sercom0, value: ''}
   - type: Integer
     attributes: {id: USART_BAUD_RATE}
     children:
@@ -178,18 +161,14 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: '115200'}
+        - {type: Value, value: 'false'}
   - type: Integer
     attributes: {id: USART_BAUD_VALUE}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: sercom2, value: '63019'}
+        attributes: {id: sercom0, value: '63019'}
   - type: KeyValueSet
     attributes: {id: USART_CHARSIZE_BITS}
     children:
@@ -198,11 +177,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: '0'}
+        - {type: Value, value: 'false'}
   - type: KeyValueSet
     attributes: {id: USART_FORM}
     children:
@@ -211,11 +186,11 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: sercom2, value: '0'}
+        attributes: {id: sercom0, value: '0'}
   - type: Boolean
     attributes: {id: USART_INTERRUPT_MODE}
     children:
@@ -224,18 +199,14 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: 'false'}
+        - {type: Value, value: 'false'}
   - type: Boolean
     attributes: {id: USART_LIN_MASTER_SUPPORTED}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: sercom2, value: 'false'}
+        attributes: {id: sercom0, value: 'false'}
   - type: KeyValueSet
     attributes: {id: USART_PARITY_MODE}
     children:
@@ -244,24 +215,16 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
   - type: Boolean
     attributes: {id: USART_RING_BUFFER_ENABLE}
     children:
     - type: Attributes
       children:
       - type: Boolean
-        attributes: {id: readOnly}
-        children:
-        - {type: Value, value: 'false'}
-      - type: Boolean
         attributes: {id: visible}
         children:
         - {type: Value, value: 'false'}
-    - type: Values
-      children:
-      - type: Dynamic
-        attributes: {id: sercom2, value: 'false'}
   - type: Boolean
     attributes: {id: USART_RUNSTDBY}
     children:
@@ -270,7 +233,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
   - type: KeyValueSet
     attributes: {id: USART_RXPO}
     children:
@@ -279,7 +242,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
   - type: Boolean
     attributes: {id: USART_RX_ENABLE}
     children:
@@ -288,34 +251,21 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
-  - type: Integer
-    attributes: {id: USART_RX_RING_BUFFER_SIZE}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: visible}
-        children:
         - {type: Value, value: 'false'}
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: '512'}
   - type: Integer
     attributes: {id: USART_SAMPLE_COUNT}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: sercom2, value: '16'}
+        attributes: {id: sercom0, value: '16'}
   - type: Integer
     attributes: {id: USART_SAMPLE_RATE}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: sercom2, value: '0'}
+        attributes: {id: sercom0, value: '0'}
   - type: KeyValueSet
     attributes: {id: USART_STOP_BIT}
     children:
@@ -324,7 +274,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
   - type: KeyValueSet
     attributes: {id: USART_TXPO}
     children:
@@ -333,7 +283,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
   - type: Boolean
     attributes: {id: USART_TX_ENABLE}
     children:
@@ -342,39 +292,39 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
-  - type: Integer
-    attributes: {id: USART_TX_RING_BUFFER_SIZE}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: visible}
-        children:
         - {type: Value, value: 'false'}
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: '512'}
 - type: Attachments
   children:
   - type: DirectCapability
-    attributes: {id: SERCOM2_SPI}
+    attributes: {id: SERCOM0_I2C}
     children:
     - type: Attributes
       children:
-      - type: Boolean
-        attributes: {id: enabled}
+      - type: String
+        attributes: {id: targetComponentID}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: atecc608_0}
+      - type: String
+        attributes: {id: targetAttachmentID}
+        children:
+        - {type: Value, value: ATECC608_DEP_PLIB_I2C}
   - type: DirectCapability
-    attributes: {id: SERCOM2_UART}
+    attributes: {id: SERCOM0_SPI}
     children:
     - type: Attributes
       children:
       - type: Boolean
         attributes: {id: enabled}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
+  - type: DirectCapability
+    attributes: {id: SERCOM0_UART}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: enabled}
+        children:
+        - {type: Value, value: 'false'}
 - type: ElementPosition
-  attributes: {x: '177', y: '217', id: sercom2}
+  attributes: {x: '25', y: '131', id: sercom0}
