--- a/firmware/src/config/default/default.mhc/sercom3.yml
+++ b/firmware/src/config/default/default.mhc/sercom3.yml
@@ -21,12 +21,6 @@ children:
   - type: KeyValueSet
     attributes: {id: SERCOM_MODE}
     children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: readOnly}
-        children:
-        - {type: Value, value: 'true'}
     - type: Values
       children:
       - type: Dynamic
@@ -113,6 +107,10 @@ children:
       children:
       - type: Boolean
         attributes: {id: readOnly}
+        children:
+        - {type: Value, value: 'false'}
+      - type: Boolean
+        attributes: {id: visible}
         children:
         - {type: Value, value: 'false'}
     - type: Values
