--- a/firmware/src/config/default/default.mhc/settings.yml
+++ b/firmware/src/config/default/default.mhc/settings.yml
@@ -10,5 +10,5 @@ settings:
   GENERATE_BACKUP: 'true'
   TRUSTZONE: 'false'
   CMSISPath: .\dev_packs\arm\CMSIS\5.7.0
-  MERGE_STRATEGY: OVERWRITE
+  MERGE_STRATEGY: USER_ALL
   DFPPath: .\dev_packs\Microchip\SAMD21_DFP\3.4.104\samd21a\atdf\ATSAMD21J18A.atdf
